# Tenpack

./: .clang-format  .clangd  CMakeLists.txt
src/: main.cpp
src/core/: allocator.hpp  apply.hpp  broadcast.hpp  config.hpp  extents.hpp  index.hpp  layout_transformer.hpp  print.hpp  random.hpp  strides.hpp  tensor.hpp  transform.hpp  transpose.hpp  types.hpp  utils.hpp  view.hpp
